--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">Simple HRV</string>
     <string name="button">Button</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="happy_monday">Happy Monday!</string>
+    <string name="you_haven_t_taken_your_survey_yet_tap_below_to_start">You haven’t taken your survey yet, tap below to start!</string>
+    <string name="start_now">Start Now!</string>
+    <string name="start_heart_rate_analysis">Start Heart Rate Analysis</string>
 </resources>
