--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="you_haven_t_taken_your_survey_yet_tap_below_to_start">You haven’t taken your survey yet, tap below to start!</string>
     <string name="start_now">Start Now!</string>
     <string name="start_heart_rate_analysis">Start Heart Rate Analysis</string>
+    <string name="tap_start_now_and_leave_the_sensor">Tap Start now and leave the sensor on for 1 minute</string>
+    <string name="start_wellness_survey">Start Wellness Survey</string>
 </resources>
