--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,11 @@
     <string name="_00">00</string>
     <string name="time_remaining">Time Remaining</string>
     <string name="_00_00">00:00</string>
+    <string name="an_image_of_a_heart">An Image of a heart</string>
+    <string name="sleep_analysis">Sleep Analysis</string>
+    <string name="next">NEXT</string>
+    <string name="low">Low</string>
+    <string name="_10">10</string>
+    <string name="_1">1</string>
+    <string name="how_would_you_rate_your_sleep_last_night">How would you rate your sleep last night?</string>
 </resources>
